<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detalle">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/cuerpoAlta"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/vistaTitulo"
            style="@style/camposVista"
            android:text="@string/Titulo" />

        <TextView
            android:id="@+id/vistaAsignatura"
            style="@style/camposVista"
            android:text="@string/Asignatura" />

        <TextView
            android:id="@+id/vistaFecha"
            style="@style/camposVista"
            android:text="@string/Fecha" />

    </LinearLayout>

    <Button
        android:id="@+id/borrar"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/borrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/estado"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:text="@string/estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borrar" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/cuerpoAlta"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/vistaDescripcion"
            style="@style/camposVista"
            android:layout_height="match_parent"
            android:text="@string/Descripcion" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>