<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".altaTarea">

    <LinearLayout
        android:id="@+id/insert"
        style="@style/cuerpoAlta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/insertAsignatura"
            style="@style/camposInsert"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Asignatura"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/insertFecha"
            style="@style/camposInsert"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Fecha"
            android:inputType="date" />

        <EditText
            android:id="@+id/insertTitulo"
            style="@style/camposInsert"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Titulo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/insertDescripcion"
            style="@style/camposInsert"
            android:layout_height="200dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Descripcion"
            android:inputType="textMultiLine" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/aceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="aceptar"
            android:text="@string/aceptar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>