<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    style="@style/layoutVista"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/cabecera"
        style="@style/layoutVista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borde"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_horizontal"
        android:paddingLeft="@dimen/padding_horizontal"
        android:paddingTop="@dimen/padding_horizontal"
        android:paddingRight="@dimen/padding_horizontal"
        android:paddingBottom="@dimen/padding_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/todas"
            style="@style/botonesPrincipal"
            android:text="@string/Todas" />

        <Button
            android:id="@+id/pendientes"
            style="@style/botonesPrincipal"
            android:text="@string/Pendientes" />

        <Button
            android:id="@+id/acabadas"
            style="@style/botonesPrincipal"
            android:text="@string/Acabadas" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollviewVer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/contentVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />


</androidx.constraintlayout.widget.ConstraintLayout>